--- a/MainViewController.xib
+++ b/MainViewController.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12E55</string>
+		<string key="IBDocument.SystemVersion">12D78</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.39</string>
+		<string key="IBDocument.AppKitVersion">1187.37</string>
 		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -53,9 +53,8 @@
 							<object class="IBUIButton" id="795726202">
 								<reference key="NSNextResponder" ref="466115531"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{-22, 280}, {131, 41}}</string>
+								<string key="NSFrame">{{-24, 289}, {131, 41}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="87304622"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -92,9 +91,8 @@
 							<object class="IBUIButton" id="874665077">
 								<reference key="NSNextResponder" ref="466115531"/>
 								<int key="NSvFlags">289</int>
-								<string key="NSFrame">{{201, 50}, {114, 19}}</string>
+								<string key="NSFrame">{{226, 72}, {89, 20}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="940269213"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -126,9 +124,8 @@
 							<object class="IBUILabel" id="940269213">
 								<reference key="NSNextResponder" ref="466115531"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{11, 199}, {299, 25}}</string>
+								<string key="NSFrame">{{0, 199}, {320, 25}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="501330398"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -145,13 +142,13 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="413468110">
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">17</double>
+									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="696868312">
+								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -161,7 +158,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="91535403"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -185,7 +181,6 @@
 								<int key="NSvFlags">266</int>
 								<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="162166006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -218,7 +213,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{133, 232}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="795726202"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -231,7 +225,6 @@
 								<int key="NSvFlags">266</int>
 								<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -261,9 +254,8 @@
 							<object class="IBUILabel" id="91535403">
 								<reference key="NSNextResponder" ref="466115531"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 49}, {199, 19}}</string>
+								<string key="NSFrame">{{0, 44}, {320, 20}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="874665077"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -275,18 +267,24 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
+								<string key="IBUIText">  Benefits</string>
 								<reference key="IBUITextColor" ref="86076774"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="413468110"/>
-								<reference key="IBUIFont" ref="696868312"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">16</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">16</double>
+									<int key="NSfFlags">16</int>
+								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</object>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="273637634"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -300,7 +298,6 @@
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="466115531"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -484,14 +481,14 @@
 						<reference key="object" ref="466115531"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="795726202"/>
-							<reference ref="940269213"/>
 							<reference ref="273637634"/>
-							<reference ref="874665077"/>
 							<reference ref="87304622"/>
 							<reference ref="501330398"/>
 							<reference ref="162166006"/>
+							<reference ref="940269213"/>
+							<reference ref="795726202"/>
 							<reference ref="91535403"/>
+							<reference ref="874665077"/>
 						</object>
 						<reference key="parent" ref="774585933"/>
 					</object>
@@ -666,162 +663,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">68</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">AGSMapView</string>
-					<string key="superclassName">AGSMapViewBase</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AGSMapView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">AGSMapViewBase</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AGSMapViewBase.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MainViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>presentLegendViewController:</string>
-							<string>presentTableOfContents:</string>
-							<string>showCurrentLocation:</string>
-							<string>showPhoneLocation:</string>
-							<string>showWebDetails:</string>
-						</object>
-						<object class="NSArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>presentLegendViewController:</string>
-							<string>presentTableOfContents:</string>
-							<string>showCurrentLocation:</string>
-							<string>showPhoneLocation:</string>
-							<string>showWebDetails:</string>
-						</object>
-						<object class="NSArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">presentLegendViewController:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">presentTableOfContents:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">showCurrentLocation:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">showPhoneLocation:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">showWebDetails:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>activityIndicator</string>
-							<string>activityLabel</string>
-							<string>currentMapLabel</string>
-							<string>findMeButton</string>
-							<string>infoButton</string>
-							<string>legendButton</string>
-							<string>mapView</string>
-							<string>notificationLabel</string>
-						</object>
-						<object class="NSArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIActivityIndicatorView</string>
-							<string>UILabel</string>
-							<string>UILabel</string>
-							<string>UIBarButtonItem</string>
-							<string>UIButton</string>
-							<string>AGSMapView</string>
-							<string>AGSMapView</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>activityIndicator</string>
-							<string>activityLabel</string>
-							<string>currentMapLabel</string>
-							<string>findMeButton</string>
-							<string>infoButton</string>
-							<string>legendButton</string>
-							<string>mapView</string>
-							<string>notificationLabel</string>
-						</object>
-						<object class="NSArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">activityIndicator</string>
-								<string key="candidateClassName">UIActivityIndicatorView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">activityLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">currentMapLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">findMeButton</string>
-								<string key="candidateClassName">UIBarButtonItem</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">infoButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">legendButton</string>
-								<string key="candidateClassName">AGSMapView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mapView</string>
-								<string key="candidateClassName">AGSMapView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">notificationLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MainViewController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
